--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-gist",
-  "version": "1.2.2",
-  "description": "Github Gist React component",
+  "name": "react-gist-v2",
+  "version": "1.0.0",
+  "description": "Github Gist React component with CSP support. Forked from react-gist.",
   "main": "lib/index.js",
   "module": "es/index.js",
   "types": "types",
@@ -26,9 +26,8 @@
     "iframe"
   ],
   "author": {
-    "name": "Tommy Leunen",
-    "email": "tommy.leunen@gmail.com",
-    "url": "http://tommyleunen.com/"
+    "name": "Salim Khan",
+    "email": "salim@huraininfotech.com"
   },
   "license": "MIT",
   "dependencies": {
